# epub-tui

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
src/epub_tui/: __main__.py  app.py  epub_loader.py  epub_tui.tcss  reader.py
